--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,42 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  margin-bottom: 60px;
+}
+
+body > .container {
+  padding: 60px 15px 0;
+}
+
+.wireframe {
+  width: 100%;
 }
 
 .content {
   padding: 3rem 1.5rem;
+}
+
+.content > .head {
   text-align: center;
+  margin-top: 1rem;
+}
+
+/* Sticky Footer */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
 }
