--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,3 +40,10 @@ body > .container {
   padding-right: 15px;
   padding-left: 15px;
 }
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+}
